fixing height issue on mobile landscape orientation

--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ $cardbackground: hsl(0, 0%, 100%);;
 
 body {
     background-color: $bodyColor;
-    margin-top: 100px;
+    margin-top: 4% ;
 
 }
 
@@ -38,7 +38,7 @@ body {
 
     padding: 15px 20px;
 
-    height: 77vh;
+    height: 100%;
 
     // box shadow
     box-shadow: 0px 10px 5px 4px rgba(114,107,107,0.19);
